Backport changes made for CheckSite.